--- a/src/components/users/Adduser.css
+++ b/src/components/users/Adduser.css
@@ -8,12 +8,11 @@ body {
 }
 
 .payroll-main{
-    height: 100%;
+    height: 80%;
     min-height: calc(10% - 80px);
     background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-  
     justify-content: center;
     align-items: center;
     padding: 0;
@@ -34,7 +33,6 @@ body {
     margin-bottom: 0.5px;
     margin-right: 90%;
     padding-bottom: 20px;
-    background-color: white;
    
 }
 
@@ -54,13 +52,13 @@ body {
     font: normal normal bold 20px/20px Montserrat;
     font-family: 'Montserrat', sans-serif;
     letter-spacing: 0px;
-    color: #82A70C;
+    color: #2156d2;
     padding-left: 10px;
     text-transform: capitalize;
 }
 
 .emp-payroll {
-    color: #42515f;
+    color: #2156d2;
 }
 
 .form-content {
@@ -88,7 +86,7 @@ body {
     color: #42515F;
     text-transform: capitalize;
     opacity: 1;
-    padding-bottom: 100px;
+    padding-bottom: 40px;
     width: 800px;
     color:black;
 }
@@ -182,8 +180,6 @@ select {
     text-decoration: none;
     cursor: pointer;
     color:blue;
-
-    
   }
   
   .submitButton {
@@ -222,8 +218,6 @@ select {
         flex-grow: 1;
         flex-direction: row-reverse;
         justify-content: space-between
-        
-
     }
     .cancelButton {
         margin-left: 0px;
@@ -255,14 +249,14 @@ select {
 }
 
 .resetButton:hover {
-    background: grey;
+    background: #82A70C;
     color: white;
 }
 
 .department {
     margin-left: 30px;
 }
-.list-group{
+/* .list-group{
     text-align:center;
     display: inline-block;
 }
@@ -270,8 +264,7 @@ select {
     padding: 5px;
     width: 35px;
     height: 35px;
-
-}
+} */
 .collapse navbar-collapse{
     background-color: white;
 }
@@ -280,19 +273,19 @@ select {
     margin-left: 70em;
     font-weight: 400;
     line-height: 1.5;
-    color: black;
-    background-color: #5560f8;
+    color: rgb(240, 240, 240);
+    background-color: #155ff2;
+    padding-bottom: 20%;
     text-align: left;
     text-decoration: none;
     vertical-align: middle;
     cursor: pointer;
     -webkit-user-select: none;
     user-select: none;
-    
-    border: 1px solid black;
-    padding: 0.500rem 0.75rem;
-    font-size: 1rem;
-    border-radius: 0.50rem;
+    border: 1px solid #0237a0;
+    padding: 0.300rem 0.60rem;
+    font-size: .9rem;
+    border-radius: 0.40rem;
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 .card {
@@ -319,6 +312,7 @@ select {
     text-align: left;
     font-size: 16px;
     font-weight: bold;
+    padding: 18px;
    
     
 }
@@ -327,13 +321,14 @@ select {
     padding: 10px ;
     border: 1px solid blue ;
     border-collapse: separate;
-    border-spacing: 15px;
+    border-spacing: 50px;
     margin-bottom: 2em;
+    padding-left: 190px;
 }
 .row{
     display: flex;
 flex-direction: row;
-margin-bottom: 5px;
+margin-bottom: 10px;
 align-items: center;
 border: 0px solid green;
 margin: 0px auto;
@@ -345,10 +340,11 @@ width: 100%;
 .label-state,
 .label-zip {
     width: calc(30% - 20px);
-    margin-right: 45px;
-
 }
-
+.label-city,
+.label-state {
+    margin-right: 25px;
+}
 .city,
 .state,
 .zip {
@@ -356,28 +352,27 @@ width: 100%;
     color: #42525f;
     opacity: 1;
     font-family: Roboto;
-    margin-right: 25px;
-    
-
 }
-
+.h3{
+    margin-right: 90% !important;
+}
 .bbb{
-    margin-left: 20px;
-    background-color: #5560f8;
+    margin-left: 40px;
+    background-color: #2156d2;
     color: #ffffff;
-    border-radius: 42%;
-    /* height: 30px; */
-    width: 35px;
-    font-size: 20px;
-    width: 26px;
+    border-radius: 30%;
+    width: 30px;
+    font-size: 15px;
+    width: 22px;
     text-align: center;
     display: inline-block;
 }
-.cancel-img
-{
-    margin-left: 25%;
+
+.cancel-img{
+    margin-left:200px;
 }
+
 .error{
-    font-size: medium;
-    color:red;
+    font-size: 17px;
+    color: red;
 }
